Bump graalvm 19 22.3.1 for libsci tests